# ai-fundraising-v2

./: .gitignore  .mcp.json.linear  CHANGELOG.md  CLAUDE.md  README.md  fundraising-analysis-report.md  mcp.json.context7  pyproject.toml
.claude/: settings.local.json
.claude/agents/: code-reviewer.md
.claude/commands/: data-model.md  spec-recipe.md  spec-split.md  work-on-issue.md  work-on-phase.md
ai_docs/: best-recipe.yaml  goose-recipe.md
docs/: DEVLOG-2025-11-05-security-tdd-framework.md  FORM-22A.md
docs/architecture/: ARCHITECTURE.md  MONITORING.md  QUICK_START_TESTING.md  SETUP.md  TDD_GUIDE.md  TESTING_SUMMARY.md  testing.md
docs/customer/: onboarding-docs.md  product-info.md
docs/devlogs/: 001-phase-one.md  002-phase-one-review.md  003-recipe-deployment-models.md  004-hybrid-architecture-r2-reports.md  005-implementation-estimate.md  2025-09-15-mcp-poc-review.md  2025-10-29-cloudflare.md  2025-10-30-api-authentication.md  2025-10-31-mill-script-organization.md  2025-10-31-reports-organization.md  2025-11-03-health-checks-monitoring-logging.md  2025-11-04-multi-client-deployment.md  2025-11-07-security-code-review.md  (+2 more)
mill/: CLAUDE.md  README.md
reports/: .gitkeep  README.md
reports-sample/: README.md
tools/security/: .gitignore  README.md  claim_tests.py  deployments.yaml  pyproject.toml  validator.py
tools/security/docs/: 00_START_HERE.md  QUICK_START.md  README_SECURITY_VALIDATOR.md  SECURITY_VALIDATION_INTEGRATION.md
tools/security/implementations/: __init__.py  logging_implementations.py
tools/security/tests/: test_claim_tests.py
(+80 files in other folders)
